# Antivirus

./: .gitignore  CMakeLists.txt  INSTALL.md  README.md  launch_sentinel.bat  launch_sentinel.ps1
AntivirusGUI/: AntivirusGUI.csproj  App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  app.manifest
AntivirusGUI/Services/: AuditReportService.cs  CleanerService.cs  ScanEngineService.cs  TunerService.cs  UsbGuardService.cs  WebShieldService.cs
AntivirusGUI/Themes/: Colors.xaml  Styles.xaml
AntivirusGUI/ViewModels/: DashboardViewModel.cs  MainViewModel.cs  PageViewModels.cs  ScanViewModel.cs  ViewModelBase.cs
AntivirusGUI/Views/: CleanerView.xaml  CleanerView.xaml.cs  DashboardView.xaml  DashboardView.xaml.cs  ProtectionView.xaml  ProtectionView.xaml.cs  QuarantineView.xaml  QuarantineView.xaml.cs  ReportsView.xaml  ReportsView.xaml.cs  ScanView.xaml  ScanView.xaml.cs  SettingsView.xaml  SettingsView.xaml.cs  TunerView.xaml  TunerView.xaml.cs  UsbGuardView.xaml  UsbGuardView.xaml.cs  WebShieldView.xaml  WebShieldView.xaml.cs
include/antivirus/config/: ConfigManager.hpp  IConfigManager.hpp
include/antivirus/core/: Engine.hpp  IEngine.hpp  Types.hpp
include/antivirus/detection/: AhoCorasick.hpp  BloomFilter.hpp  HashEngine.hpp  PatternMatcher.hpp  ScanCache.hpp  SignatureDatabase.hpp  SignatureUpdater.hpp  YaraEngine.hpp
include/antivirus/gpu/: CpuFallback.hpp  CudaCompute.hpp  GpuComputeFactory.hpp  IGpuCompute.hpp
include/antivirus/logging/: ILogger.hpp  LogLevel.hpp  Logger.hpp
include/antivirus/quarantine/: IQuarantineManager.hpp  QuarantineEntry.hpp  QuarantineManager.hpp
include/antivirus/scanner/: FileScanner.hpp  IFileScanner.hpp  ScanResult.hpp
include/antivirus/threading/: IThreadPool.hpp  ThreadPool.hpp  WorkStealingQueue.hpp
include/antivirus/utils/: LockFreeQueue.hpp  MemoryPool.hpp  SIMDUtils.hpp
rules/: sentinel_rules.yar
signatures/: malware_signatures.db
src/: main.cpp
src/config/: ConfigManager.cpp
src/core/: Engine.cpp
src/detection/: AhoCorasick.cpp  BloomFilter.cpp  HashEngine.cpp  PatternMatcher.cpp  ScanCache.cpp  SignatureDatabase.cpp  SignatureUpdater.cpp  YaraEngine.cpp
src/gpu/: CpuFallback.cpp  CudaCompute.cu  GpuComputeFactory.cpp
src/logging/: Logger.cpp
src/quarantine/: QuarantineManager.cpp
src/scanner/: FileScanner.cpp
src/threading/: ThreadPool.cpp
